# plutone11011.github.io

./: .gitignore  template.html
_layouts/: custom_post.html  index.html
_posts/: 2022-04-25-broadcasting.markdown  2025-02-09-logregression.markdown  2025-02-09-rust_logregression.markdown  2025-02-19-clustering.markdown
assets/: index.css  index.scss
assets/css/: style.scss
docs/: _config.yml
docs/_posts/: 2025-02-03-welcome-to-jekyll.markdown
docs/assets/: main.scss  tooltip.css
ml-rust/: Cargo.toml
ml-rust/backprop/: Cargo.toml
ml-rust/backprop/src/: main.rs
ml-rust/clustering/: Cargo.toml
ml-rust/clustering/src/: main.rs
ml-rust/linear_classification/: Cargo.toml
ml-rust/linear_classification/src/: Linear_regression.ipynb  main.rs
ml-rust/linear_classification/src/.ipynb_checkpoints/: Linear_regression-checkpoint.ipynb
rust-ml/linear_classification/: Cargo.toml
rust-ml/linear_classification/src/: main.rs
