[package]
name = "backprop"
version = "0.1.0"
edition = "2021"

[dependencies]
graphviz-rust = "0.9.3"
rand = "0.9.0"

[dependencies.uuid]
version = "1.14.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
